--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,105 @@
 :root {
-    var(--black): #1f2221;
+    --black: #1f2221;
 }
 body {
     background-color: var(--black);
+    font-family: "Geist", Arial, Helvetica, sans-serif;
+    color: white;
+    margin: 0;
+}
+
+.glass {
+    background: rgba(255, 255, 255, 0.11);
+    border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.3px);
+    -webkit-backdrop-filter: blur(5.3px);
+    border: 1px solid rgba(255, 255, 255, 0.26);
+}
+
+.upper {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
+}
+
+.logo {
+    height: 2rem;
+    position: relative;
+    z-index: 1000;
+}
+.menu-btn {
+    position: relative;
+    font-size: 1.2rem;
+    cursor: pointer;
+    z-index: 1000;
+    transition: all 0.3s ease;
+    color: white;
+    padding: 0.3rem 1rem;
+    font-family: "Geist", Arial, Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+.menu-btn:hover {
+    background: #000;
+    color: #fff;
+}
+
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(10, 10, 10, 0.95);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    z-index: 999;
+}
+
+.nav.open {
+    visibility: visible;
+    opacity: 1;
+}
+
+.nav__menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.nav__link {
+    color: #fff;
+    font-size: 2rem;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    font-weight: 300;
+}
+
+.nav__link:hover {
+    color: #ff9900;
+}
+
+#landing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100svh;
+    background-image: url(assets/background.webp);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin-top: -6svh;
+}
+
+section .glass {
+    padding: 0rem 0.3rem;
 }
