--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     margin: 0;
 }
 
+.sr-only {
+    display: none;
+}
+
 .glass {
     background: rgba(255, 255, 255, 0.11);
     border-radius: 10px;
@@ -202,6 +206,7 @@ section .glass {
 
 .email a {
     text-decoration: none;
+    color: white;
 }
 #email p {
     margin: 0;
